更新打包策略

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
+    "target": "ESNext",
     "skipLibCheck": true,
+    "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
