--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:test": "tsc && vite build --mode test",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
   },
@@ -34,7 +35,10 @@
     "path": "^0.12.7",
     "prettier": "^2.8.8",
     "react-window": "^1.8.9",
+    "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-chunk-split": "^0.4.7",
+    "vite-plugin-imp": "^2.4.0"
   }
 }
