--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "react-window": "^1.8.9",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-chunk-split": "^0.4.7",
-    "vite-plugin-imp": "^2.4.0"
+    "vite": "^4.4.5"
   }
 }
